setup laravel testing

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [master]
 
+permissions:
+  contents: write # Allows the workflow to push changes
+  actions: read # Allows reading action logs
+  pull-requests: write # Enables PR creation and updates
+
 jobs:
   tests:
     runs-on: ubuntu-latest
@@ -24,5 +29,35 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
 
-      # - name: Run tests
-      #   run: ./vendor/bin/phpunit
+      - name: Create Laravel Project
+        run: |
+          composer create-project laravel/laravel laravel-test-project --no-interaction --no-progress
+          cd laravel-test-project
+          mkdir -p packages/eren-laravel-commands
+          cd ..
+
+      - name: Copy Local Package
+        run: cp -r . laravel-test-project/packages/eren-laravel-commands
+
+      - name: Link Local Package
+        run: |
+          cd laravel-test-project
+          composer config repositories.local '{"type": "path", "url": "packages/eren-laravel-commands", "options": {"symlink": true}}'
+          composer require eren/laravel-commands:@dev --no-interaction --no-progress
+
+      - name: Prepare Laravel Environment
+        run: |
+          cd laravel-test-project
+          cp .env.example .env
+          php artisan key:generate
+          php artisan config:clear
+
+      - name: Modify phpunit.xml to Include Package Tests
+        run: |
+          cd laravel-test-project
+          sed -i '/<\/testsuite>/i\        <directory suffix="Test.php">./packages/eren-laravel-commands/src/tests</directory>' phpunit.xml
+
+      - name: Run Tests
+        run: |
+          cd laravel-test-project
+          php artisan test
