--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,20 +38,25 @@ jobs:
         run: rsync -av --exclude='laravel-test-project' ./ laravel-test-project/packages/eren-laravel-commands/
 
       - name: Link Local Package
+        working-directory: laravel-test-project
         run: |
           composer config repositories.local '{"type": "path", "url": "packages/eren-laravel-commands", "options": {"symlink": true}}'
           composer require eren/laravel-commands:@dev --no-interaction --no-progress
 
       - name: Prepare Laravel Environment
+        working-directory: laravel-test-project
         run: |
           cp .env.example .env
           php artisan key:generate
           php artisan config:clear
 
       - name: Modify phpunit.xml to Include Package Tests
+        working-directory: laravel-test-project
         run: |
           sed -i '/<\/testsuite>/i\        <directory suffix="Test.php">./packages/eren-laravel-commands/src/tests</directory>' phpunit.xml
 
       - name: Run Tests
+        working-directory: laravel-test-project
         run: |
+          cd laravel-test-project
           php artisan test
