--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         laravel: [9.*]  # Laravel versions to test
-        php: [8.0, 8.1, 8.2]  # PHP versions to test
+        php: [8.1, 8.2]  # PHP versions to test
 
     steps:
       - name: Checkout code
