--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,7 +39,7 @@ jobs:
         working-directory: laravel-test-project
         run: |
           composer update laravel/framework
-          composer require --dev orchestra/testbench:^6.0
+          composer require --dev orchestra/testbench
 
       - name: Copy Local Package
         run: rsync -av --exclude='laravel-test-project' ./ laravel-test-project/packages/eren/laravel-commands/
