--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,6 +40,9 @@ jobs:
         run: |
           composer update laravel/framework
 
+      - name: Laravel version
+        run: composer show laravel/framework
+
       - name: Copy Local Package
         run: rsync -av --exclude='laravel-test-project' ./ laravel-test-project/packages/eren/laravel-commands/
 
@@ -57,9 +60,9 @@ jobs:
           php artisan config:clear
 
       - name: Modify phpunit.xml to Include Package Tests
-        working-directory: laravel-test-project
         run: |
-          sed -i '/<\/testsuite>/i\        <directory suffix="Test.php">packages/eren/laravel-commands/src/Tests</directory>' phpunit.xml
+          # sed -i '/<\/testsuite>/i\        <directory suffix="Test.php">packages/eren/laravel-commands/src/Tests</directory>' phpunit.xml
+          rsync -av --exclude='laravel-test-project' ./src/Tests/ laravel-test-project/tests/Unit
 
       - name: Run Tests
         working-directory: laravel-test-project
