--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,6 +41,7 @@ jobs:
           composer update laravel/framework
 
       - name: Laravel version
+        working-directory: laravel-test-project
         run: composer show laravel/framework
 
       - name: Copy Local Package
