--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,8 +16,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        laravel: [9.*]  # Laravel versions to test
-        php: [8.1, 8.2]  # PHP versions to test
+        laravel: [9.*, 10.*]  # Laravel versions to test
+        php: [8.1, 8.2, 8.3]  # PHP versions to test
 
     steps:
       - name: Checkout code
