--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,7 @@
     "require-dev": {
         "phpunit/phpunit": "^9.6",
         "orchestra/testbench": "^7.47"
-    }
+    },
+    "version": "1.1",
+    "minimum-stability": "stable"
 }
